double-modals popping up resolved; activities table alignment improved

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -443,8 +443,8 @@ body {
   margin-left: 15px;
   margin-bottom: 20px;
   margin-right: 0;
-  padding-top: 35px;
-  /* padding-bottom: 20px; */
+  padding-top: 20px;
+  padding-bottom: 20px;
   /* display: inline-block; */
   justify-content: center;
   border-radius: 4px;
@@ -706,8 +706,8 @@ body {
 }
 
 .period-details-container {
-  width: 310px;
-  height: 340px;
+  width: 330px;
+  height: 360px;
   overflow: hidden;
   overflow-y: scroll;
   align-items: start;
@@ -783,7 +783,7 @@ body {
 
 .add-form {
   width: 90%;
-  align-items: start;
+  text-align: start;
   padding-left: 35px;
 }
 
@@ -1698,7 +1698,7 @@ padding: 0}
 .activity-row {
   padding: 10px;
   padding-left: 20px;
-  /* padding-top:  */
+  /* padding-top: 25px; */
   font-family: "poppins", sans-serif;
   font-size: 15px;
   font-weight: 200;
@@ -1736,6 +1736,7 @@ padding: 0}
   text-align: left;
   padding: 10px;
   padding-left: 20px;
+  padding-top: 20px;
   background-color: #bb5454;
   color: white
 }
@@ -1750,19 +1751,20 @@ th.activity-cell-notes, th.activity-cell-sufferscore{
 }
 
 .activity-cell-date {
-  width: 100%;
+  width: 18%;
   display: inline-block
 }
 
 .activity-cell-name {
-  width: 100%;
+  width: 30%;
   font-weight: 300;
   display: inline-block;
   cursor: pointer
 }
 
 td.activity-cell-name {
-  width: 100%;
+  width: 30%;
+  white-space: wrap;
   font-weight: 300;
   /* color: rgb(172, 114, 114); */
   display: inline-block;
@@ -1771,28 +1773,85 @@ td.activity-cell-name {
 }
 
 .activity-cell-type {
-  width: 100%;
-  display: inline-block
+  width: 10%;
+  display: inline-block;
+  text-align: left;
 }
 
-.activity-cell-distance, .activity-cell-duration {
-  width: 100%;
+.activity-cell-distance {
+  width: 14%;
   display: inline-block;
-  margin-right: -12px
+  /* margin-right: -12px */
+}
+
+.activity-cell-duration {
+  width: 12%;
+  display: inline-block;
+  /* margin-right: -12px */
 }
 
 .activity-cell-notes {
-  width: 100%;
+  width: 12%;
   display: inline-block;
-  text-align: center;
+  text-align: left;
 }
 
+/* .activity-cell-sufferscore {
+  width: 15%;
+  display: inline-block;
+  text-align: left;
+} */
 .activity-cell-sufferscore {
-  width: 100%;
+  width: 10%;
   display: inline-block;
   text-align: center;
 }
 
+th.activity-cell-sufferscore{
+  font-weight: 300;
+  text-align: center;
+  white-space: normal;
+  line-height: 1.2;
+  margin-top: -8px
+}
+
+th.activity-cell-notes {
+  text-align: center;
+}
+
+.period-cell-date {
+  width: 30%;
+  display: inline-block
+}
+
+.period-cell-flow {
+  width: 30%;
+  font-weight: 300;
+  display: inline-block;
+  cursor: pointer
+}
+
+td.period-cell-flow {
+  width: 30%;
+  white-space: wrap;
+  font-weight: 300;
+  /* color: rgb(172, 114, 114); */
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: underline dotted rgb(195, 195, 195)
+}
+
+.period-cell-sx {
+  width: 20%;
+  display: inline-block;
+  text-align: left;
+}
+
+.period-cell-notes {
+  width: 30%;
+  display: inline-block;
+  text-align: center;
+}
 
 .bolder {
   font-weight: 700
